# DecisionTree

./: .gitignore  CMakeLists.txt  main.cpp
include/: Dataset.h  DecisionTree.h  TreeNode.h
src/: Dataset.cpp  DecisionTree.cpp  TreeNode.cpp
tests/: DataGenerator.h  test_dataset.cpp  test_node.cpp
